# multi-platform-deployer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cli.py  deploy.py  pyproject.toml  setup.py
.github/workflows/: deploy-render.yml  release.yml  tests.yml
examples/django_app/: README.md  deployment.yaml  requirements.txt
examples/fastapi_app/: README.md  app.py  deployment.yaml  requirements.txt
examples/flask_app/: README.md  app.py  deployment.yaml
src/multi_platform_deployer/: __init__.py  cli.py  main.py
src/multi_platform_deployer/checkers/: __init__.py  base.py  django_checker.py  fastapi_checker.py  flask_checker.py  system_checker.py
src/multi_platform_deployer/config/: __init__.py  loader.py  validator.py
src/multi_platform_deployer/deployers/: __init__.py  base.py  heroku.py  railway.py  render.py  vercel.py
src/multi_platform_deployer/scripts/: __init__.py  health_check.py  migrator.py  rollback.py
src/multi_platform_deployer/utils/: __init__.py  helpers.py  logger.py  validators.py
tests/: test_checkers.py  test_config.py  test_deployers.py  test_main.py  test_rollback.py  test_utils.py
